--- a/Server/.env
+++ b/Server/.env
@@ -1,9 +1,6 @@
+DATABASE_URL=postgres://user:password@localhost:5432/libria_db
 JWT_SECRET=your_jwt_secret_here
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=odila_db
