--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,5 @@
 services:
   - type: web
-    name: libria-frontend
-    env: static
-    buildCommand: npm run build
-    staticPublishPath: ./dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-    envVars:
-      - key: NODE_VERSION
-        value: 18
-      - key: VITE_API_URL
-        value: https://libria-api.onrender.com
-
-  - type: web
     name: libria-api
     env: node
     buildCommand: cd server && npm install
@@ -22,10 +7,14 @@ services:
     envVars:
       - key: NODE_VERSION
         value: 18
+      - key: NODE_ENV
+        value: production
       - key: DATABASE_URL
-        sync: false
+        fromDatabase:
+          name: libria-db
+          property: connectionString
       - key: JWT_SECRET
-        sync: false
+        generateValue: true
       - key: SMTP_HOST
         value: smtp.gmail.com
       - key: SMTP_PORT
@@ -34,3 +23,8 @@ services:
         sync: false
       - key: SMTP_PASS
         sync: false
+
+databases:
+  - name: libria-db
+    plan: free
+    ipAllowList: [] # Allow all IPs
