--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: libria-api
     env: node
-    buildCommand: cd server && npm install
-    startCommand: cd server && npm start
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_VERSION
         value: 18
@@ -27,4 +27,4 @@ services:
 databases:
   - name: libria-db
     plan: free
-    ipAllowList: [] # Allow all IPs
+    ipAllowList: []
