--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-pool": "^3.6.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "vite": "^6.0.3"
   }
 }
