--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://libria_user:Ty3xpz5BuRlgiJbXa3h7XN1MM4co0ouP@dpg-cuc4islumphs73dtbml0-a/libria
+DATABASE_URL=postgresql://libria_user:Ty3xpz5BuRlgiJbXa3h7XN1MM4co0ouP@dpg-cuc4islumphs73dtbml0-a.oregon-postgres.render.com/libria
 JWT_SECRET=your_jwt_secret_here
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
