--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=postgres://user:password@localhost:5432/libria_db
+DATABASE_URL=postgresql://postgres.wtcwtfcesapingokhmxk:564783921@Pruebas@aws-0-us-west-1.pooler.supabase.com:6543/postgres
 JWT_SECRET=your_jwt_secret_here
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=6543
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password
